--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -65,14 +65,13 @@
                          style="border-top: 4px #206dfb solid;border-top-right-radius: 4px;border-top-left-radius: 4px;">
 
                         <div class="border-0 rounded-0 bg-white sticky-top js-filter">
-                            <div class="d-lg-none d-flex justify-content-between mb-3 sticky-top bg-white">
-                                <button class="btn btn-outline-dark btn-sm btn-round" id="closeFilter" type="button"><i
+
+                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères</h3>
+                            <div class="d-lg-none mb-3 sticky-top bg-white">
+                                <button class="btn btn-outline-main btn-sm btn-round" id="closeFilter" type="button"><i
                                             class="fas fa-chevron-left mr-3"></i>retour
                                 </button>
-                                <button class="btn btn-text btn-sm btn-round" id="resetForm" type="button">Tout effacer
-                                </button>
                             </div>
-                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères</h3>
 
 
                             {{ form_start(form) }}
