--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -32,23 +32,17 @@
                     <div class="media">
                         <img src="https://www.vroomiz.fr/bundles/vrzfront/front/img/logo.png" width="75rem" class="align-self-start mr-3 img-thumbnail" alt="...">
                         <div class="media-body">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h5 class="mt-0">{{ dealer.dealerName }}</h5>
-                                    <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en ligne</h6>
-                                </div>
-                                <div>
-                                    <a href="#" class="btn btn-secondary">
-                                        Contacter l'annonceur
-                                    </a>
-                                </div>
-                            </div>
+                            <h5 class="mt-0">{{ dealer.dealerName }}</h5>
+                            <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en ligne</h6>
 
                         </div>
                     </div>
                     <hr>
-                    <a class="list-annonce-place" href="#"><i class="fas fa-map-marker-alt mr-2 text-main" aria-hidden="true"></i>{{ dealer.annonces[0].adress.city ~ " " ~ dealer.annonces[0].adress.region ~ ", " ~ dealer.annonces[0].adress.postal_code }}
-                    </a>
+                    <p>
+                        <a href="#" class="text-dark"><i class="fas fa-map-marker-alt mr-2 text-main" aria-hidden="true"></i>{{ dealer.annonces[0].adress.city ~ " " ~ dealer.annonces[0].adress.region ~ ", " ~ dealer.annonces[0].adress.postal_code }}
+                        </a>
+
+                    </p>
 
                     {% for message in app.flashes('success') %}
                         <div class="alert alert-success mt-2">
@@ -59,9 +53,10 @@
             </div>
         </div>
     </div>
-    <div class="d-flex d-lg-none mt-3 p-3">
-        <button class="btn btn-outline-dark btn-round" id="showFilter">
-            Filtre
+    <div class="d-flex d-lg-none mt-3 p-3 justify-content-end">
+        <button class="btn btn-outline-dark btn-round " id="showFilter">
+            <i class="fas fa-search mr-2"></i>
+            Plus de filtre
         </button>
     </div>
     <section class="ftco-section bg-light">
